<resources>
    <string name="app_name">SportApp</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="action_create">New event</string>
    <string name="sign_in_cancelled">Sign in cancelled</string>
    <string name="no_internet_connection">No internet connection</string>
    <string name="unknown_error">Sign in went wrong</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_out">Sign out</string>
    <string name="events_list">Events</string>
    <string name="create_new_event">Create new event</string>
    <string name="version">Version 1.0.0</string>
    <string name="created_by">Created by Jakub Veverka</string>
    <string name="tw_name">Name</string>
    <string name="tw_title">Title:</string>
    <string name="et_title_hint">Enter title</string>
    <string name="tw_address">Place:</string>
    <string name="et_place_hint">Enter address</string>
    <string name="btn_start_date">Pick a start date</string>
    <string name="btn_end_date">Pick an end date</string>
    <string name="tw_select_storage">Select storage:</string>
    <string name="logged_in_as">Logged in as %1$s</string>
    <string name="sql_database">SQL</string>
    <string name="firebase_database">Firebase</string>
    <string name="all_fields_are_required_error">All fields are required</string>
    <string name="btn_create_event">Create event</string>
    <string name="start_date_has_to_be_lower_than_end_date">Start date has to be lower than an end date</string>
    <string name="failed_to_create_an_event">Failed to create an event</string>
    <string name="event_created">Event was created</string>
</resources>
